# datawatcher

./: .gitignore  README.md  README.rst  pyproject.toml  upload_pypi.py
datawatcher/: __init__.py  datawatcher.py
